feat(esbuild)增加esbild-dev-server插件

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "start": "node index.js",
     "build": "node build.js",
-    "serve": "node serve/http-static.js"
+    "serve": "node serve/http-watch.js"
   },
   "keywords": [],
   "author": "",
